modified contactus components.

--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,3 +1,25 @@
-<p>
-  contactus works!
-</p>
+<div class="body">
+
+
+
+<h3>CONTACT DETAILS</h3>
+  <b> Adress:</b><br>
+  House No.-7/77,New Colony Dhaiya,<br>
+  S.K. Kundu Lane,Near Dhaiya Durga Mandir,<br>
+  I.S.M.,Dhanbad-826004,<br>
+  Jharkhand,India<br>
+  <h4>Mobile:</h4>
+  
+  +91 8240539160<br>
+  +91 6204989655<br>
+  +91 7970635228<br>
+  +91 7321800909<br>
+  +91 9113433507<br>
+</div>
+
+
+
+
+
+  
+
