--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,7 +8,7 @@
       <a class="nav-link" [routerLink]="['/aboutus']">About Us</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link 2</a>
+      <a class="nav-link" [routerLink]="['/contactus']">Contact us</a>
     </li>
 
     <!-- Dropdown -->
