modified about us contents.

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,3 +1,61 @@
+<body background="../../assets/b.jpg" height=100% width=100% size=cover align=center>
+
+
+
 <p>
-  aboutus works!
+  Cyprus Corporate Center is established as trader in the year 2005.We are specialised in VDF and all types of epoxy works.
+  We also provide sales and services support regarding construction machineries.
+ 
 </p>
+<h3>COMPANY PROFILE</h3><br>
+
+<h5>Basic Information</h5><br>
+Nature of Business:Traders<br>
+Name of Owner:Basudev Ghosh & Reba Ghosh(Partners)<br> 
+Key Customers:L&T,Kamaladitya,DRDO,MB Traders,Mcnally,Navyug,etc.<br>
+Registered Address: House No.-7/77,New Colony Dhaiya,<br>
+S.K. Kundu Lane,Near Dhaiya Durga Mandir,<br>
+I.S.M.,Dhanbad-826004,<br>
+Jharkhand,India<br>
+Year of Establishment:2005<br>
+Experience:13years<br>
+Recent Projects:Jodhpur,Barkagaon,Jammu&Kashmir,Orissa,Guwahati,etc<br>
+
+<h5>Statutory Profile</h5>
+GST no.:20AQCPG1789J1ZZ
+PAN no.:AANFC4992L
+
+<h5>Payment and Shipment Details</h5>
+Payment Mode:
+<ul>
+<li>Cash</li>
+<li>Credit Card</li>
+<li>Cheque</li>
+<li>DD</li>
+<li>Online</li>
+<li>Bank Transfer</li>
+</ul>
+Shipment Mode:By Road
+
+<h3>ISO Certification</h3>
+<img src="../../assets/ISO.jpg" height=300 width= 250>
+Issue Date:<br>
+Expiry Date:<br>
+
+<h3>Our Team</h3>
+The workforce is an inseparable and integrated part of any organization. We have a diligent and talented team of experts 
+and professionals from different fields.
+Our workforce consists of the following:
+Production engineers
+Technicians
+Quality inspectors
+Sales and marketing executives
+All the members of our workforce work in perfect coordination to enable uninterrupted business and production procedures. 
+All our personnel have thorough knowledge and experience in their related field and can efficiently handle all situations.
+Their efforts and sincere dedication towards their work have taken our company to newer heights, over the years. 
+
+
+</body>
+
+
+
