--- a/src/app/contactus/contactus.component.css
+++ b/src/app/contactus/contactus.component.css
@@ -1,7 +1,14 @@
 h3,h4{color:red;}
 b{color:blueviolet;}
-.body {
+body, html {
+    height: 100%;
+    width: 100%;
+}
+ body{
     background-image: url("../../assets/bd.jpg");
     background-repeat: no-repeat;
     text-align: center;
+    height: 100%; 
+    width: 100%;
+    background-size: cover;
 }
