--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,5 +1,30 @@
-<div class="body">
 
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+        }
+        
+        .bg {
+            /* The image used */
+            background-image: url("../../assets/bd.jpg");
+        
+            /* Full height */
+            height: 100%; 
+        
+            /* Center and scale the image nicely */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        </style>
+        </head>
+<body>        
+
+<div class="bg">
 
 
 <h3>CONTACT DETAILS</h3>
@@ -15,7 +40,12 @@
   +91 7970635228<br>
   +91 7321800909<br>
   +91 9113433507<br>
+  ksbdkjvsdncjnzn,mcn<br>
+  zvjxc nmckj hm nbmf<br>
+  kjdjhdvnvnkfdjbkfk<br>
 </div>
+</body>
+</html>
 
 
 
