--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -14,13 +14,26 @@
     <!-- Dropdown -->
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Dropdown link
+        Services
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" [routerLink]="['/aboutus']">About Us</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
+        <a class="dropdown-item" href="#">Vaccum Dewatering Floor</a>
+        <a class="dropdown-item" href="#">Epoxy Fooring</a>
+        <a class="dropdown-item" href="#">Electrical Work</a>
+        
       </div>
     </li>
+     <!-- Dropdown -->
+     <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+          Products
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Construction Machineries</a>
+          <a class="dropdown-item" href="#">Survey Equipments</a>
+          <a class="dropdown-item" href="#"></a>
+          
+        </div>
+      </li>
   </ul>
 </nav>
