--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div>
   <footer class = "container-fluid text-center" style="background-color:darkgrey;position: fixed;left: 0;
   bottom: 0;
-  width: 100%;">
+  width: 90%;">
     <p>
       <br/>
-      &copy; Cyprus Enterprise!!
+      &copy; Cyprus Enterprise.All Rights Reserved (Terms of Use)
     </p>
   </footer>
 </div>
