slight changes in background img. of abt. us & contact us.

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,6 +1,6 @@
-<body background="../../assets/b.jpg" height=100% width=100% size=cover align=center>
 
 
+<div class=abt>
 
 <p>
   Cyprus Corporate Center is established as trader in the year 2005.We are specialised in VDF and all types of epoxy works.
@@ -22,8 +22,8 @@ Experience:13years<br>
 Recent Projects:Jodhpur,Barkagaon,Jammu&Kashmir,Orissa,Guwahati,etc<br>
 
 <h5>Statutory Profile</h5>
-GST no.:20AQCPG1789J1ZZ
-PAN no.:AANFC4992L
+GST no.:20AQCPG1789J1ZZ<br>
+PAN no.:AANFC4992L<br>
 
 <h5>Payment and Shipment Details</h5>
 Payment Mode:
@@ -54,8 +54,7 @@ All the members of our workforce work in perfect coordination to enable uninterr
 All our personnel have thorough knowledge and experience in their related field and can efficiently handle all situations.
 Their efforts and sincere dedication towards their work have taken our company to newer heights, over the years. 
 
-
-</body>
+</div>
 
 
 
