--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -10,7 +10,7 @@
         
         .bg {
             /* The image used */
-            background-image: url("../../assets/bd.jpg");
+            background-image: url("../../assets/bk.jpg");
         
             /* Full height */
             height: 100%; 
@@ -18,7 +18,7 @@
             /* Center and scale the image nicely */
             background-position: center;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: 100% 100%;
         }
         </style>
         </head>
@@ -40,10 +40,20 @@
   +91 7970635228<br>
   +91 7321800909<br>
   +91 9113433507<br>
-  ksbdkjvsdncjnzn,mcn<br>
-  zvjxc nmckj hm nbmf<br>
-  kjdjhdvnvnkfdjbkfk<br>
+ 
 </div>
+<div id="map" style="width:400px;height:400px"></div>
+<script>
+function myMap() {
+    var mapOptions = {
+        center: new google.maps.LatLng(51.5, -0.12),
+        zoom: 10,
+        mapTypeId: google.maps.MapTypeId.HYBRID
+    }
+var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
 </body>
 </html>
 
