--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,18 @@
 
+<html>
+  <head>
+
+  </head>
+  <style>
+  .body{
+
+
+    color:aqua;
+  }
+  
+  
+  </style>
+  <body>
 <div id="demo" class="carousel slide" data-ride="carousel" style="text-align:center">
 
   <!-- Indicators -->
@@ -34,3 +48,5 @@
   </a>
 
 </div>
+</body>
+</html>
