--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -19,7 +19,19 @@
       <div class="dropdown-menu">
         <a class="dropdown-item" href="#">Vaccum Dewatering Floor</a>
         <a class="dropdown-item" href="#">Epoxy Fooring</a>
+        <ul>
+            <li>P.U Paint</li>
+            <li>Epoxy Roller Paint</li>
+            <li>Antistatic Epoxy Floor</li>
+            <li></li>
+           </ul>
         <a class="dropdown-item" href="#">Electrical Work</a>
+        <ul>
+            <li>Bus Boring wiring</li>
+            <li>All types of Electrical Fitting</li>
+            <li>Modification in Electrical Control Panel</li>
+            <li></li>
+           </ul>
         
       </div>
     </li>
@@ -30,7 +42,23 @@
         </a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#">Construction Machineries</a>
+          <ul>
+          <li>suspended platform</li>
+          <li>static concrete batching & mixing plant</li>
+          <li>mobile concrete batching & mixiing plant</li>
+          <li>reversible concrete mixers</li>
+          <li></li>
+         </ul>
           <a class="dropdown-item" href="#">Survey Equipments</a>
+          <ul>
+              <li>monkey hoist</li>
+              <li>plate compactor</li>
+              <li>bar cutting machine</li>
+              <li>compressor testing machine</li>
+              <li>concrete mixer with hopper</li>
+              <li></li>
+             </ul>
+
           <a class="dropdown-item" href="#"></a>
           
         </div>
