--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -1,2 +1,7 @@
-body{text-align:center;
+.abt{text-align:center;
+    background-image: url("../../assets/b.jpg");
+     
+     background-repeat: no-repeat;
+     background-size: 100% 100%;
+     background-position: center;
 }
