--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,65 +1,40 @@
-
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        
-        .bg {
-            /* The image used */
-            background-image: url("../../assets/bk.jpg");
-        
-            /* Full height */
-            height: 100%; 
-        
-            /* Center and scale the image nicely */
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
-        }
-        </style>
-        </head>
-<body>        
-
-<div class="bg">
-
-
-<h3>CONTACT DETAILS</h3>
-  <b> Adress:</b><br>
-  House No.-7/77,New Colony Dhaiya,<br>
-  S.K. Kundu Lane,Near Dhaiya Durga Mandir,<br>
-  I.S.M.,Dhanbad-826004,<br>
-  Jharkhand,India<br>
-  <h4>Mobile:</h4>
-  
-  +91 8240539160<br>
-  +91 6204989655<br>
-  +91 7970635228<br>
-  +91 7321800909<br>
-  +91 9113433507<br>
- 
+<div class="container">
+    <div class="jumbotron contact">
+        <h3 class="subtitle">CONTACT DETAILS</h3>
+        <div class="row"><div class="col-sm-6">
+        <h5 class="subtitle"> Adress:</h5>
+        <div class = "details">
+            House No.-7/77,New Colony Dhaiya,<br/>
+            S.K. Kundu Lane,Near Dhaiya Durga Mandir,<br/>
+            I.S.M.,Dhanbad-826004,<br/>
+            Jharkhand,India<br/>
+                    </div>
+                  </div>
+                  <div class="col-sm-6" style="text-align: center">
+                    <h5 class = "subtitle">Mobile:</h5>
+                    <div class = "details">
+                  +91 8240539160<br/>
+                  +91 6204989655<br/>
+                  +91 7970635228<br/>
+                  +91 7321800909<br/>
+                  +91 9113433507<br/>
+                    </div>
+                  </div>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
 </div>
-<div id="map" style="width:400px;height:400px"></div>
-<script>
-function myMap() {
-    var mapOptions = {
-        center: new google.maps.LatLng(51.5, -0.12),
-        zoom: 10,
-        mapTypeId: google.maps.MapTypeId.HYBRID
-    }
-var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-</body>
-</html>
+</div>
 
 
 
 
 
-  
 
