--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,52 +1,152 @@
+<div class="container">
+  <div class="jumbotron">
+    <h1 class="title"> Welcome to the Cyprus Corporation !!</h1>
+    <marquee>
+      <h3 class="subtitle"> You can reach us at mob:- 998547885</h3>
+    </marquee>
+    <div id="demo" class="carousel slide" data-ride="carousel" style="text-align:center">
 
-<html>
-  <head>
+      <!-- Indicators -->
+      <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+        <li data-target="#demo" data-slide-to="3"></li>
+      </ul>
 
-  </head>
-  <style>
-  .body{
+      <!-- The slideshow -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../../assets/Cyprus_Img1.jpg" alt="Cyprus machine1" height="350" width="700">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/Cyprus_Img2.jpg" alt="Cyprus machine2" height="350" width="700">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/Cyprus_Img3.jpg" alt="Cyprus machine3" height="350" width="700">
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/Cyprus_Img4.jpg" alt="Cyprus machine4" height="350" width="700">
+        </div>
+      </div>
 
-
-    color:aqua;
-  }
-  
-  
-  </style>
-  <body>
-<div id="demo" class="carousel slide" data-ride="carousel" style="text-align:center">
-
-  <!-- Indicators -->
-  <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-    <li data-target="#demo" data-slide-to="3"></li>
-  </ul>
-
-  <!-- The slideshow -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../../assets/Cyprus_Img1.jpg" alt="Cyprus machine1" height="300" width="400">
+      <!-- Left and right controls -->
+      <!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a> -->
     </div>
-    <div class="carousel-item">
-      <img src="../../assets/Cyprus_Img2.jpg" alt="Cyprus machine2" height="300" width="400">
-    </div>
-    <div class="carousel-item">
-      <img src="../../assets/Cyprus_Img3.jpg" alt="Cyprus machine3" height="300" width="450">
-    </div>
-    <div class="carousel-item">
-      <img src="../../assets/Cyprus_Img4.jpg" alt="Cyprus machine4" height="300" width="400">
+    <br/>
+    <div class="body">
+      <div class="row">
+        <div class="col-sm-12">
+          <h3 class="subtitle">
+            Who we are
+          </h3>
+          <hr/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          A short story is a piece of prose fiction that typically can be read in one sitting and focuses on a self-contained incident
+          or series of linked incidents, with the intent of evoking a "single effect" or mood, however there are many exceptions
+          to this. A dictionary definition is "an invented prose narrative shorter than a novel usually dealing with a few
+          characters and aiming at unity of effect and often concentrating on the creation of mood rather than plot."[1]
+          The short story is a crafted form in its own right. Short stories make use of plot, resonance, and other dynamic
+          components as in a novel, but typically to a lesser degree. While the short story is largely distinct from the
+          novel or novella (a shorter novel), authors generally draw from a common pool of literary techniques.
+          <div class="row">
+            <div class="col-sm-12 subtitle">
+              Our ISO  Certification
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12" style="text-align: left;">
+              <img src="../../assets/ISO.jpg" alt="Cyprus machine" height="300" width="250">
+            </div>
+          </div>
+        </div>
+      </div>
+      <br/>
+      <div class="row">
+        <div class="col-sm-12">
+          <h3 class="subtitle">
+            What we offer
+          </h3>
+          <hr/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          A short story is a piece of prose fiction that typically can be read in one sitting and focuses on a self-contained incident
+          or series of linked incidents, with the intent of evoking a "single effect" or mood, however there are many exceptions
+          to this. A dictionary definition is "an invented prose narrative shorter than a novel usually dealing with a few
+          characters and aiming at unity of effect and often concentrating on the creation of mood rather than plot."[1]
+          The short story is a crafted form in its own right. Short stories make use of plot, resonance, and other dynamic
+          components as in a novel, but typically to a lesser degree. While the short story is largely distinct from the
+          novel or novella (a shorter novel), authors generally draw from a common pool of literary techniques.
+          <div class="row">
+            <div class="col-sm-12 subtitle">
+              High Quality Machines
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="../../assets/compact-batching-plant.jpg" alt="Cyprus machine" height="200" width="200">
+            </div>
+            <div class="col-sm-3">
+              <img src="../../assets/ball crusher.jpg" alt="Cyprus machine" height="200" width="200">
+            </div>
+            <div class="col-sm-3">
+              <img src="../../assets/compressor testing.gif" alt="Cyprus machine" height="200" width="200">
+            </div>
+            <div class="col-sm-3">
+              <img src="../../assets/bar bend.jpg" alt="Cyprus machine" height="200" width="200">
+            </div>
+          </div>
+        </div>
+      </div>
+      <br/>
+      <div class="row">
+          <div class="col-sm-12">
+            <h3 class="subtitle">
+              Our Ongoing Projects
+            </h3>
+            <hr/>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+              A short story is a piece of prose fiction that typically can be read in one sitting and focuses on a self-contained incident
+              or series of linked incidents, with the intent of evoking a "single effect" or mood, however there are many exceptions
+              to this. A dictionary definition is "an invented prose narrative shorter than a novel usually dealing with a few
+              characters and aiming at unity of effect and often concentrating on the creation of mood rather than plot."[1]
+              The short story is a crafted form in its own right. Short stories make use of plot, resonance, and other dynamic
+              components as in a novel, but typically to a lesser degree. While the short story is largely distinct from the
+              novel or novella (a shorter novel), authors generally draw from a common pool of literary techniques.
+              <div class="row">
+                <div class="col-sm-12 subtitle">
+                  Some of the Images from Construction site
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-3">
+                  <img src="../../assets/construction-zone.jpg" alt="Cyprus machine" height="200" width="200">
+                </div>
+                <div class="col-sm-3">
+                  <img src="../../assets/concrete-lift-mixture-machine-500x500.jpg" alt="Cyprus machine" height="200" width="200">
+                </div>
+                <div class="col-sm-3">
+                  <img src="../../assets/cutting.jpg" alt="Cyprus machine" height="200" width="200">
+                </div>
+                <div class="col-sm-3">
+                  <img src="../../assets/Double_Toggle_Jaw.jpg" alt="Cyprus machine" height="200" width="200">
+                </div>
+              </div>
+            </div>
+          </div>
     </div>
   </div>
-
-  <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-
 </div>
-</body>
-</html>
