--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,1 +1,16 @@
-body {background-color: coral;}
+.title{
+  color: navy;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+}
+.body{
+  text-align: center;
+}
+
+.subtitle{
+  color: darkblue;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  text-decoration: underline;
+  text-align: left;
+}
