Added two new page product and service and now user can submit a query from the Contactus page

--- a/src/app/contactus/contactus.component.css
+++ b/src/app/contactus/contactus.component.css
@@ -17,3 +17,15 @@
   text-align: left;
   font-weight: bold;
 }
+.contactusform{
+  height: 200px;
+  width: 500px;
+  text-align: center;
+}
+
+.lbl{
+  color: navy;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  background: lightblue;
+}
