--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
+    <!-- <h1 class="title"> Welcome to the Cyprus Corporation !!</h1> -->
   <div class="jumbotron">
-    <h1 class="title"> Welcome to the Cyprus Corporation !!</h1>
     <marquee>
       <h3 class="subtitle"> You can reach us at mob:- 998547885</h3>
     </marquee>
