modified home,product,service components.

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#"><img src="../../assets/Cyprus.jpg" height="35" width="30"><b>CYPRUS</b> CORPORATE CENTRE</a>
+  <a class="navbar-brand" href="#"><img class="rounded" src="../../assets/logo.png" height="30" width="40">&nbsp;<b>CYPRUS</b> CORPORATE CENTRE</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
@@ -18,7 +18,8 @@
     <li class="nav-item dropdown">
       <a class="nav-link" [routerLink]="['/services']" >
         Services
-      </a>
+        </a>
+        
     </li>
      <!-- Dropdown -->
      <li class="nav-item dropdown">
