--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,23 +1,59 @@
 <div class="container">
   <div class="jumbotron product">
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    
 
+      
+          <img src="../../assets/suspend.jpg" alt="Cyprus machine1" height="250" width="250"class="right"><br>
+          Suspended Platform
+       
+          <img src="../../assets/screed2.jpg" alt="Cyprus machine2" height="250" width="250"class="right"><br>
+          <img src="../../assets/floater.jpg" alt="Cyprus machine2" height="250" width="250"class="right">
+          <img src="../../assets/trowel.jpg" alt="Cyprus machine2" height="250" width="250"class="right"><br>
+          <img src="../../assets/Vdf pump.jpg" alt="Cyprus machine2" height="250" width="250"class="right">
+          <img src="../../assets/groove cutting.jpg" alt="Cyprus machine2" height="250" width="250"class="right"><br>
+          Vacuum Dewatering System
+        
+          <img src="../../assets/batch.jpeg" alt="Cyprus machine3" height="250" width="250"class="right"><br>
+          Automatic Static Scrapper Concrete Batching And Mixing Plant
+        
+          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Mobile Inline Concrete Batching And Mixing Plant
+        
+          <img src="../../assets/reversible.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Reversible Concrete Mixer<br>
+          <img src="../../assets/lift.jpg" alt= "cyprus machine5" height="250" width="250"class="right">
+         <img src="../../assets/hydraulic.jpg" alt= "cyprus machine5" height="250" width="250"class="right"><br>
+          Movable Concrete Mixer with Lift Movable Hydraulic Hopper Concrete Mixer with Lift<br>
+
+        
+          <b><i>SURVEY AND LABORATORY EQUIPMENTS</i></b><br>
+          <img src="../../assets/monkey2.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Monkey Hoist
+        
+          <img src="../../assets/plate4.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Plate Compactor
+       
+          <img src="../../assets/compressor.gif" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Compressor Testing Machine
+        
+          <img src="../../assets/bar1.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Bar cutting Machine
+        
+          <img src="../../assets/bar2.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Bar Bending Machine
+        
+          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Mobile Inline Concrete Batching And Mixing Plant
+        
+          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Mobile Inline Concrete Batching And Mixing Plant
+       
+          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Mobile Inline Concrete Batching And Mixing Plant
+        
+          <img src="../../assets/inline.jpg" alt="Cyprus machine4" height="250" width="250"class="right"><br>
+          Mobile Inline Concrete Batching And Mixing Plant
+        
+   
   </div>
 </div>
