--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,22 +1,20 @@
+
+
+<body>
 <div class="container">
     <div class="jumbotron service">
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+            <img src="../../assets/epoxy.jpg" alt="Cyprus machine1" height="450" width="700" class="center"><br>
+             EPOXY FLOORING<br>
+       
+          <img src="../../assets/vdf 3.jpg" alt="Cyprus machine2" height="450" width="350" class="center">
+          <img src="../../assets/v.jpg" alt="Cyprus machine2" height="450" width="350" class="center"><br>
+          VACUUM DEWATERING FLOORING<br>
+        
+          <img src="../../assets/water.jpg" alt="Cyprus machine3" height="450" width="700" class="center"><br>
+          WATER PROOFING<br>
+        
+          
+            
     </div>
   </div>
+</body>
