--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <!-- <h1 class="title"> Welcome to the Cyprus Corporation !!</h1> -->
   <div class="jumbotron">
     <marquee>
-      <h3 class="subtitle"> You can reach us at mob:- 998547885</h3>
+      <h3 class="subtitle"> You can reach us at mob:- +91-8240539160</h3>
     </marquee>
     <div id="demo" class="carousel slide" data-ride="carousel" style="text-align:center">
 
@@ -17,16 +17,16 @@
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../../assets/Cyprus_Img1.jpg" alt="Cyprus machine1" height="350" width="700">
+          <img src="../../assets/d.jpeg" alt="Cyprus machine1" height="350" width="700">
         </div>
         <div class="carousel-item">
-          <img src="../../assets/Cyprus_Img2.jpg" alt="Cyprus machine2" height="350" width="700">
+          <img src="../../assets/3.jpg" alt="Cyprus machine2" height="350" width="700">
         </div>
         <div class="carousel-item">
-          <img src="../../assets/Cyprus_Img3.jpg" alt="Cyprus machine3" height="350" width="700">
+          <img src="../../assets/groove.jpg" alt="Cyprus machine3" height="350" width="700">
         </div>
         <div class="carousel-item">
-          <img src="../../assets/Cyprus_Img4.jpg" alt="Cyprus machine4" height="350" width="700">
+          <img src="../../assets/c.jpg" alt="Cyprus machine4" height="350" width="700">
         </div>
       </div>
 
@@ -50,13 +50,12 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          A short story is a piece of prose fiction that typically can be read in one sitting and focuses on a self-contained incident
-          or series of linked incidents, with the intent of evoking a "single effect" or mood, however there are many exceptions
-          to this. A dictionary definition is "an invented prose narrative shorter than a novel usually dealing with a few
-          characters and aiming at unity of effect and often concentrating on the creation of mood rather than plot."[1]
-          The short story is a crafted form in its own right. Short stories make use of plot, resonance, and other dynamic
-          components as in a novel, but typically to a lesser degree. While the short story is largely distinct from the
-          novel or novella (a shorter novel), authors generally draw from a common pool of literary techniques.
+            Established in the year 2013, We "CYPRUS CORPORATE CENTER" is one of Eastern India's greatest traders of
+             Construction Machineries ,Survey And Laboratory equipments . Our range finds extensive application 
+             in various industries such as construction, mining.Our CYPRUS also provide very fine work in Vacuum Dewatering Flooring,
+             Epoxy Flooring,Water Proofing etc. We have an experience of more than <b>20</b> years in this field. <br>
+
+
           <div class="row">
             <div class="col-sm-12 subtitle">
               Our ISO  Certification
@@ -80,13 +79,11 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          A short story is a piece of prose fiction that typically can be read in one sitting and focuses on a self-contained incident
-          or series of linked incidents, with the intent of evoking a "single effect" or mood, however there are many exceptions
-          to this. A dictionary definition is "an invented prose narrative shorter than a novel usually dealing with a few
-          characters and aiming at unity of effect and often concentrating on the creation of mood rather than plot."[1]
-          The short story is a crafted form in its own right. Short stories make use of plot, resonance, and other dynamic
-          components as in a novel, but typically to a lesser degree. While the short story is largely distinct from the
-          novel or novella (a shorter novel), authors generally draw from a common pool of literary techniques.
+          
+            We adhere to international standard to fabricate our assortment.
+            Efficiently handled by our diligent team, we have state-of-the-art manufacturing and designing unit to 
+            create a precision engineered range of Rebar Processing Machines & Construction Machinery.
+            Owing to the technically advanced design, our range can withstand harsh conditions efficiently and effectively.
           <div class="row">
             <div class="col-sm-12 subtitle">
               High Quality Machines
@@ -100,7 +97,7 @@
               <img src="../../assets/ball crusher.jpg" alt="Cyprus machine" height="200" width="200">
             </div>
             <div class="col-sm-3">
-              <img src="../../assets/compressor testing.gif" alt="Cyprus machine" height="200" width="200">
+              <img src="../../assets/toggle.jpeg" alt="Cyprus machine" height="200" width="200">
             </div>
             <div class="col-sm-3">
               <img src="../../assets/bar bend.jpg" alt="Cyprus machine" height="200" width="200">
@@ -112,20 +109,18 @@
       <div class="row">
           <div class="col-sm-12">
             <h3 class="subtitle">
-              Our Ongoing Projects
+              Our PROJECTS
             </h3>
             <hr/>
           </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
-              A short story is a piece of prose fiction that typically can be read in one sitting and focuses on a self-contained incident
-              or series of linked incidents, with the intent of evoking a "single effect" or mood, however there are many exceptions
-              to this. A dictionary definition is "an invented prose narrative shorter than a novel usually dealing with a few
-              characters and aiming at unity of effect and often concentrating on the creation of mood rather than plot."[1]
-              The short story is a crafted form in its own right. Short stories make use of plot, resonance, and other dynamic
-              components as in a novel, but typically to a lesser degree. While the short story is largely distinct from the
-              novel or novella (a shorter novel), authors generally draw from a common pool of literary techniques.
+              
+              Till now we have worked with many companies such as DRDO,L&T, MES, MRO,Kashyapi Infrastructure Pvt. Ltd.,Macnally,
+              MBECL and many more in the list to go.
+              Right now we are working with Mcnally Bharat Engineering Ltd. in Barkagaon,Jharkhand and Jammu & Kashmir.
+
               <div class="row">
                 <div class="col-sm-12 subtitle">
                   Some of the Images from Construction site
@@ -136,13 +131,13 @@
                   <img src="../../assets/construction-zone.jpg" alt="Cyprus machine" height="200" width="200">
                 </div>
                 <div class="col-sm-3">
-                  <img src="../../assets/concrete-lift-mixture-machine-500x500.jpg" alt="Cyprus machine" height="200" width="200">
+                  <img src="../../assets/vdf2.jpg" alt="Cyprus machine" height="200" width="200">
                 </div>
                 <div class="col-sm-3">
                   <img src="../../assets/cutting.jpg" alt="Cyprus machine" height="200" width="200">
                 </div>
                 <div class="col-sm-3">
-                  <img src="../../assets/Double_Toggle_Jaw.jpg" alt="Cyprus machine" height="200" width="200">
+                  <img src="../../assets/epo2.jpg" alt="Cyprus machine" height="200" width="200">
                 </div>
               </div>
             </div>
