--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -3,3 +3,9 @@
   background-size: cover;
   background-size: 100% 100%;
 }
+.right {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
