--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -2,4 +2,11 @@
   background: linear-gradient(rgba(255, 255, 255, .5), rgba(255, 255, 255, .5)), url('../../assets/construction-services.jpeg') no-repeat;
   background-size: cover;
   background-size: 100% 100%;
+
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
